# AndWe-CLI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
commands/: chat.py
src/kurocode/: exceptions.py
src/kurocode/commands/: ask.py  chat.py
src/kurocode/core/: model_registry.py
src/kurocode/infra/: __init__.py  config.py  openrouter_client.py  store.py
